# microgp4

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  PARANOIA.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: default-script.py  default-source.py  history.md  index.md
examples/: .gitignore  demo-parameter.py  demo_parameter.py  dummy.py  fitness-demo.py  onemax-classic.py  parameters-playground.py
examples/notebooks/: demo-asm.ipynb  demo-bnf.ipynb  draw2.ipynb  fitness-demo.ipynb  netx.ipynb
examples/onemax-asm/: .gitignore  Makefile  evaluate-all.cmd  evaluate-all.sh  library_arm64.py  library_x86_64.py  main.c  onemax-asm.py  onemax.out  onemax_test.c  onemax_test.s
examples/onemax-asm_osx-silicon/: Makefile  evaluator_script.sh  onemax.py  onemax_test.c
examples/onemax-asm_osx-x64/: Makefile  Untitled.ipynb  onemax  onemax.c  onemax.py  onemax_test.c  solution.s
examples/onemax-asm_win_x64/: onemax.py  onemax_test.c
examples/onemax-classic/: .gitignore  Makefile  onemax-classic.py
experiments/: arcade-test.py  concurrency.ipynb  concurrency.py  exceptions.ipynb  exp_bnf.py  exp_parameters.py  functions.ipynb  g.ipynb  i.py  joblib-study.ipynb  k42.py  mut1.py  p0.s  p1.s  scratch-paper.ipynb  stat.ipynb  t.py  t2.py  t3.py  tf.py  tr.py  vb.py  wraps.ipynb
helpers/: hack-pycache.sh
microgp4/: PARANOIA.md  __init__.py  decorators.py  evaluator_.py  fitness_.py  fitness_log.py  functions.py  global_symbols.py  pyproject.toml  registry.py  requirements.txt  statistics.py  sys.py  sysinfo.py  utils.py
microgp4/classes/: __init__.py  checkable.py  evaluator.py  evolvable.py  fitness.py  fitness_base.py  frame.py  identifiable.py  individual.py  macro.py  monitor.py  node_reference.py  node_view.py  parameter.py  paranoid.py  pedantic.py  population.py  readymade_frames.py  readymade_macros.py  selement.py  shared.py  value_bag.py
microgp4/ea/: __init__.py  builtins.py  common.py  gops_special.py  graph.py  parametric.py  vanilla.py
microgp4/fitness/: __init__.py  base.py  basic.py  evaluator.py  multiobjective.py  reverse.py  simple.py  utils.py
microgp4/framework/: __init__.py  bnf.py  framework.py  macro.py  parameter.py  parameter_structural_global.py  parameter_structural_local.py  shared.py  utilities.py
microgp4/operators/: __init__.py  graph.py  graph_crossover.py  initializers.py  mutation.py  special.py  unroll.py
microgp4/randy/: __init__.py  randy.py  test_randy.py  test_randy2.py
microgp4/registry/: __init__.py  decorators.py  registrar.py  stats.py
microgp4/reproducible_random/: __init__.py  facade.py  main.py
microgp4/tools/: dump.py  graph.py  names.py
microgp4/user_messages/: __init__.py  checks.py  exception.py  messaging.py  modes.py
notebooks/: fitness.ipynb  kickstart.ipynb  stats-performances.ipynb  stats.ipynb
samples/: exp01.py
src/microgp/: genoperator.py
test/: test_0.py  test_decorators.py  test_global_symbols.py  test_random_individual.py
test/classes/: test_checkable.py
test/ea/: test_evaluators.py  test_onemax.py
test/legacy/paranoia/: test_networkx.py
test/microgp4/: _test_decorators.py  _test_random_individual.py
test/microgp4/classes/: _test_class_macro.py  _test_classes_parameter.py  _test_evaluator.py  _test_frame.py  _test_individual.py  _test_node_view.py  _test_readymade_macros.py  evaluator_test.py  test_checkable.py  test_class_fitness.py  test_class_macro.py  test_classes_parameter.py  test_frame.py  test_identifiable.py  test_individual.py  test_macro.py  test_monitor.py  test_node_reference.py  test_node_view.py  test_paranoid.py  test_population.py  test_readymade_macros.py  test_value_bag.py
test/microgp4/ea/: test_parameters.py
test/microgp4/fitness/: _test_fitness.py  test_class_fitness.py  test_fitness.py
test/microgp4/framework/: _test_framework.py  _test_parameter.py  _test_shared.py  _test_utilities.py  shared_test.py  test_bnf.py  test_framework.py  test_framework_parameters.py  test_macro.py  test_parameter.py  test_parameter_structural_global.py  test_parameter_structure_local.py  test_utilities.py
test/microgp4/spare/: _test_randy.py  test_randy.py
test/microgp4/tools/: _test_dump.py  _test_names.py  _test_parameter_structure_local.py  _test_tools_graph.py  test_dump.py  test_names.py  test_parameter_structure_local.py  test_tools_graph.py
test/microgp4/user_messages/: _test_checks.py  _test_modes.py  test_checks.py  test_messaging.py  test_modes.py
test/paranoia/: test_networkx.py  test_reproducibility.py
test/runs/: test_evaluators.py  test_onemax.py
tests/: test_random.py
utils/: source.me
